@@ -1,27 +1,38 @@
 package com.funding.backend.domain.donation.service;
 
 import com.funding.backend.domain.donation.dto.request.DonationUpdateRequestDto;
+import com.funding.backend.domain.donation.dto.response.DonationListResponseDto;
 import com.funding.backend.domain.donation.entity.Donation;
 import com.funding.backend.domain.donation.repository.DonationRepository;
 import com.funding.backend.domain.donation.dto.request.DonationProjectDetail;
+import com.funding.backend.domain.donationMilestone.dto.response.DonationMilestoneResponseDto;
+import com.funding.backend.domain.donationReward.dto.response.DonationRewardResponseDto;
+import com.funding.backend.domain.follow.service.FollowService;
 import com.funding.backend.domain.mainCategory.entity.MainCategory;
 import com.funding.backend.domain.mainCategory.service.MainCategoryService;
+import com.funding.backend.domain.order.service.OrderService;
 import com.funding.backend.domain.project.dto.response.DonationProjectResponseDto;
 import com.funding.backend.domain.project.entity.Project;
 import com.funding.backend.domain.project.repository.ProjectRepository;
-import com.funding.backend.domain.projectSubCategory.dto.request.ProjectSubRequestDto;
 import com.funding.backend.domain.projectSubCategory.entity.ProjectSubCategory;
 import com.funding.backend.domain.projectSubCategory.service.ProjectSubCategoryService;
 import com.funding.backend.domain.subjectCategory.entity.SubjectCategory;
 import com.funding.backend.domain.subjectCategory.service.SubjectCategoryService;
+import com.funding.backend.domain.user.entity.User;
+import com.funding.backend.domain.user.service.UserService;
+import com.funding.backend.enums.ProjectStatus;
+import com.funding.backend.enums.ProjectType;
 import com.funding.backend.global.exception.BusinessLogicException;
 import com.funding.backend.global.exception.ExceptionCode;
+import com.funding.backend.security.jwt.TokenService;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -37,6 +48,10 @@ public class DonationService {
   private final MainCategoryService mainCategoryService;
   private final SubjectCategoryService subjectCategoryService;
   private final ProjectSubCategoryService projectSubCategoryService;
+  private final UserService userService;
+  private final TokenService tokenService;
+  private final FollowService followService;
+  private final OrderService orderService;
 
   @Transactional
   public Donation createDonation(Project project, DonationProjectDetail dto) {
@@ -53,11 +68,11 @@ public class DonationService {
     Donation donation = Donation.builder()
         .project(project)
         .mainCategory(mainCategory)
-        .priceGoal(dto.getPriceGoal())
         .startDate(dto.getStartDate().atStartOfDay())
         .endDate(dto.getEndDate().atStartOfDay())
         .gitAddress(dto.getGitAddress())
         .deployAddress(dto.getDeployAddress())
+        .appStoreAddress(dto.getAppStoreAddress())
         .build();
 
     Donation savedDonation = donationRepository.save(donation);
@@ -105,16 +120,32 @@ public class DonationService {
   public DonationProjectResponseDto createDonationProjectResponse(Project project) {
     Donation detail = findByProject(project);
 
-    List<ProjectSubRequestDto> projectSubDtos = detail.getProjectSubCategories().stream()
-        .map(psc -> new ProjectSubRequestDto(
-            psc.getSubjectCategory().getId(),
-            psc.getSubjectCategory().getName()
-        ))
-        .collect(Collectors.toList());
+    List<DonationRewardResponseDto> rewardDtos = detail.getDonationRewardList().stream()
+        .map(DonationRewardResponseDto::new).toList();
+    List<DonationMilestoneResponseDto> milestoneDtos = detail.getDonationMilestoneList().stream()
+        .map(DonationMilestoneResponseDto::new).toList();
+
+    User user = userService.findUserById(tokenService.getUserIdFromAccessToken());
+    Long projectCount = projectRepository.countByUserIdAndProjectStatusIn(user.getId(), Arrays.asList(
+        ProjectStatus.RECRUITING, ProjectStatus.COMPLETED));
+    Long followerCount = followService.countFollowers(user.getId());
 
     return new DonationProjectResponseDto(
-        project, detail, projectSubDtos
+        project, detail, rewardDtos, milestoneDtos, projectCount, followerCount
     );
+  }
+
+
+  public Page<DonationListResponseDto> getMyDonationProjectList(Pageable pageable){
+    User loginUser = userService.findUserById(tokenService.getUserIdFromAccessToken());
+    Page<Project> donationProjectList = projectRepository.findByUserIdAndProjectTypeWithDonation(
+        loginUser.getId(), ProjectType.DONATION, pageable);
+
+    return donationProjectList.map(project -> {
+      //후원 정산 구현 완료되면 수정할 예정(지금은 임시로)
+      Long sellCount = orderService.donationOrderCount(project);
+      return new DonationListResponseDto(project, sellCount);
+    });
   }
 
 }
